Changelog
=========

2.0.1 (current dev)
-------------------

- Dependency updates

2.0.0
-----

Supported GEO-Link API versions: v1.0.0, v1.1.0, v1.1.1, v1.2.0, v1.2.1 (default)

- Add support for GEO-Link API version 1.2.1 (new attribute "municipality")
- Drop support for Python 2
- Dependency updates

1.5.4
-----

Supported GEO-Link API versions: v1.0.0, v1.1.0, v1.1.1, v1.2.0 (default)

- Use GitHub Actions instead of Travis
- Dependency updates

1.5.3
-----

Supported GEO-Link API versions: v1.0.0, v1.1.0, v1.1.1, v1.2.0 (default)

- Fix decoding error for schema version 1.2.0

1.5.2
-----

Supported GEO-Link API versions: v1.0.0, v1.1.0, v1.1.1, v1.2.0 (default)

- Parse schema only if validation is enabled
- Dependency updates

1.5.1
-----

Supported GEO-Link API versions: v1.0.0, v1.1.0, v1.1.1, v1.2.0 (default)

- Add missing enumeration values for federal level in schema


1.5.0
-----

Supported GEO-Link API versions: v1.0.0, v1.1.0, v1.1.1, v1.2.0 (default)

- Add support for GEO-Link API version 1.2.0
- New document attribute 'language'
- New doctype 'notice'
- Files now have descriptions as well as titles, using the description for
  display where possible


1.4.0
-----

Supported GEO-Link API versions: v1.0.0, v1.1.0, v1.1.1 (default)

- Add test for arbitrary URL parameters
- Add enumeration value "Bezirk" for attribute "federal_level"
- If available, show abrogation date instead of files in HTML output
- Add additional attributes in schema (approval_date, publication_date and cycle)


1.3.2
-----

Supported GEO-Link API versions: v1.0.0, v1.1.0, v1.1.1 (default)

- Move repository to GitHub openoereb
- Use defusedxml for XML parsing
- Drop support for Python 3.4


1.3.1
-----

Supported GEO-Link API versions: v1.0.0, v1.1.0, v1.1.1 (default)

- Add support for GEO-Link API version 1.1.1


1.3.0
-----

Supported GEO-Link API versions: v1.0.0, v1.1.0 (default)

- Add support for multiple GEO-Link API versions


1.2.0
-----
